<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout style="@style/LinearLayoutTheme">

        <TextView
            android:id="@+id/book_information"
            style="@style/EditorLabelTheme"
            android:text="@string/book_information_label" />

        <LinearLayout style="@style/EditTextLayoutTheme">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditTextTheme"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditTextTheme"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutTheme">

        <TextView
            android:id="@+id/available_quantity"
            style="@style/EditorLabelTheme"
            android:text="@string/available_quantity_label" />

        <LinearLayout
            style="@style/EditTextLayoutTheme"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/increment_quantity_button"
                style="@style/ButtonTheme"
                android:src="@drawable/ic_up_arrow" />

            <EditText
                android:id="@+id/edit_quantity"
                style="@style/QuantityEditTextTheme"
                android:hint="@string/quantity_hint"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/decrement_quantity_button"
                style="@style/ButtonTheme"
                android:src="@drawable/ic_down_arrow" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutTheme">

        <TextView
            android:id="@+id/supplier_information"
            style="@style/EditorLabelTheme"
            android:text="@string/supplier_information_label" />

        <LinearLayout style="@style/EditTextLayoutTheme">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditTextTheme"
                android:hint="@string/supplier_name_hint"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditTextTheme"
                android:hint="@string/supplier_phone_hint"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/contact_supplier"
        style="@style/ButtonTheme"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact_button_label" />

</LinearLayout>